--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 25
         targetSdkVersion 27
         versionCode 49
-        versionName "0.47.13.(71-1959)"
+        versionName "0.47.14"
         multiDexEnabled true
     }
     buildTypes {
