--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 25
         targetSdkVersion 27
         versionCode 49
-        versionName "0.50"
+        versionName "0.50(1963)"
         multiDexEnabled true
     }
     buildTypes {
