(Version: 0.60) => #2060 (Bolong) BT Link pulser type selector 11/15/2022.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 25
         targetSdkVersion 27
         versionCode 49
-        versionName "0.59(1655)"
+        versionName "0.60"
         multiDexEnabled true
     }
     buildTypes {
