(Version: 0.60(2080)) => #2080 => Changed the sleep time in file transfer process.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 25
         targetSdkVersion 27
         versionCode 49
-        versionName "0.60"
+        versionName "0.60(2080)"
         multiDexEnabled true
     }
     buildTypes {
