--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 25
         targetSdkVersion 27
         versionCode 49
-        versionName "0.64"
+        versionName "0.65"
         multiDexEnabled true
     }
     buildTypes {
@@ -62,12 +62,15 @@ dependencies {
     implementation 'com.linkedin.dexmaker:dexmaker-mockito:2.12.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-
     api fileTree(dir: 'libs', include: ['*.jar'])
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.jetbrains:annotations:15.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Important - the CameraSource implementation in this project requires version 8.1 or higher.
     implementation 'com.google.android.gms:play-services-vision:20.1.0'
@@ -85,7 +88,13 @@ dependencies {
 
     implementation project(":Barcode_app")
 
+
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation "com.google.android.gms:play-services-base:17.3.0"
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    implementation 'com.github.xizzhu:simple-tool-tip:0.7.0'
+
+    implementation 'com.azure.android:azure-maps-control:1.+'
+
 }
