--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven { url 'https://jitpack.io' }
+        maven { url "https://atlas.microsoft.com/sdk/android" }
     }
 }
 
