(Version: V0.72) => 1. #2131 => Merged., 2.#2160 (Eva) Screen Names 3/13/23., 3. #2162 => Fixed issue in Add New Link.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".BT_Link_Oscilloscope_Activity"
+            android:exported="false" />
+        <activity
             android:name=".BT_Link_P_Type_Activity"
             android:exported="false" />
         <activity
