--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 25
         targetSdkVersion 27
         versionCode 49
-        versionName "0.71"
+        versionName "0.72"
         multiDexEnabled true
     }
     buildTypes {
@@ -96,5 +96,6 @@ dependencies {
     implementation 'com.github.xizzhu:simple-tool-tip:0.7.0'
 
     implementation 'com.azure.android:azure-maps-control:1.+'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
