--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 25
         targetSdkVersion 31
         versionCode 49
-        versionName "0.77(1)"
+        versionName "0.78"
         multiDexEnabled true
 
         ndk {
