--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,12 @@ android {
         applicationId "com.TrakEngineering.FluidSecureHub"
         minSdkVersion 25
         targetSdkVersion 31
-        versionCode 49
-        versionName "0.78"
+        versionCode 51
+        versionName "0.79"
         multiDexEnabled true
 
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
     }
     buildTypes {
