--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
+    /*compileSdkVersion 31
+    buildToolsVersion "30.0.3"*/
 
     dexOptions {
         preDexLibraries = false
@@ -12,13 +14,14 @@ android {
     defaultConfig {
         applicationId "com.TrakEngineering.FluidSecureHub"
         minSdkVersion 25
-        targetSdkVersion 31
+        targetSdkVersion 28
+        //targetSdkVersion 31
         versionCode 51
-        versionName "0.79"
+        versionName "0.80"
         multiDexEnabled true
 
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            abiFilters "armeabi-v7a", "x86" //, "arm64-v8a", "x86", "x86_64"
         }
     }
     buildTypes {
@@ -26,7 +29,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-
+        lintOptions {
+            checkReleaseBuilds false
+            abortOnError false
+        }
     }
     compileOptions {
         targetCompatibility 1.8
@@ -100,6 +106,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.xizzhu:simple-tool-tip:0.7.0'
 
-    implementation 'com.azure.android:azure-maps-control:1.3.0'
+    implementation 'com.azure.android:azure-maps-control:1.1.0'
 
 }
