--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
-    /*compileSdkVersion 31
-    buildToolsVersion "30.0.3"*/
+    /*compileSdkVersion 28
+    buildToolsVersion '28.0.3'*/
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     dexOptions {
         preDexLibraries = false
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 28
         //targetSdkVersion 31
         versionCode 51
-        versionName "0.83"
+        versionName "0.84"
         multiDexEnabled true
 
         ndk {
