--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 28
         //targetSdkVersion 31
         versionCode 51
-        versionName "0.93(1)"
+        versionName "0.94"
         multiDexEnabled true
 
         ndk {
