--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,11 @@ android {
         targetSdkVersion 28
         //targetSdkVersion 31
         versionCode 51
-        versionName "1.7"
+        versionName "1.8"
         multiDexEnabled true
 
         ndk {
-            abiFilters "armeabi-v7a", "x86" //, "arm64-v8a", "x86", "x86_64"
+            abiFilters "armeabi-v7a", "x86_64" //, "arm64-v8a", "x86"
         }
     }
     buildTypes {
