(Version: V1.17) => 1. #2636 => Made some changes in build parameters to support latest version of Android 14., 2. #2635 => Fixed the reinstate issue.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,11 @@ android {
         targetSdkVersion 28
         //targetSdkVersion 31
         versionCode 51
-        versionName "1.16"
+        versionName "1.17"
         multiDexEnabled true
 
         ndk {
-            abiFilters "armeabi-v7a", "x86", "x86_64" //, "arm64-v8a", "x86"
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64" //, "x86"
         }
     }
     buildTypes {
