--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 28
         //targetSdkVersion 31
         versionCode 51
-        versionName "1.18"
+        versionName "1.19"
         multiDexEnabled true
 
         ndk {
@@ -42,7 +42,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
 
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -107,5 +106,6 @@ dependencies {
     implementation 'com.github.xizzhu:simple-tool-tip:0.7.0'
 
     implementation 'com.azure.android:azure-maps-control:1.0.0'
-
+    implementation 'com.google.guava:guava:29.0-android'
+    implementation "androidx.work:work-runtime:2.7.1"
 }
