--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 28
         //targetSdkVersion 31
         versionCode 51
-        versionName "1.25"
+        versionName "1.26"
         multiDexEnabled true
 
         ndk {
@@ -66,9 +66,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     implementation project(':acsbt')
-    implementation 'com.thanosfisherman.wifiutils:wifiutils:1.3.7'
+    implementation 'io.github.thanosfisherman.wifiutils:wifiutils:1.6.6'
 
-    implementation 'com.linkedin.dexmaker:dexmaker-mockito:2.12.1'
+    //implementation 'com.linkedin.dexmaker:dexmaker-mockito:2.12.1'
+    implementation 'com.linkedin.dexmaker:dexmaker:2.28.1'
+    implementation 'com.linkedin.dexmaker:dexmaker-mockito:2.28.1'
+
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     api fileTree(dir: 'libs', include: ['*.jar'])
@@ -79,7 +82,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Important - the CameraSource implementation in this project requires version 8.1 or higher.
     implementation 'com.google.android.gms:play-services-vision:20.1.0'
@@ -87,7 +90,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.microsoft.azure.android:azure-storage-android:2.0.0@aar'
 
-    implementation 'com.mani:ThinDownloadManager:1.4.0'
+    //implementation 'com.mani:ThinDownloadManager:1.4.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
@@ -105,7 +108,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.xizzhu:simple-tool-tip:0.7.0'
 
-    implementation 'com.azure.android:azure-maps-control:1.0.0'
+    //implementation 'com.azure.android:azure-maps-control:1.0.0'
     implementation 'com.google.guava:guava:29.0-android'
     implementation "androidx.work:work-runtime:2.7.1"
+
 }
