(Version: V1.28) => 1. #2955 (Eva) Last 20 transactions being asked from LINK 7/25/25 => Removed last20 command., 2. #2954 (EVA) NO NO NO NO NO…. - Performing OTHER operations in the middle of a transaction 7/25/25., 3. #2949 (Nic) Txn Email Delay 7/21/25 => Made changes to bring the HUB app back to the foreground if it goes to the background.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -378,6 +378,13 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".AppLaunchReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
 
         <activity android:name=".AcceptPinActivity_new" />
         <activity android:name=".AcceptVehicleActivity_new" />
